# diff_geom

./: .gitignore  README.md  test.csv  visualize.py
diff_geom/: CMakeLists.txt  algebra.cpp  algebra.cu  algebra.h  atlas.cpp  atlas.h  color.cpp  color.h  constants.h  diff_geom.pro  ellipsoid.cpp  ellipsoid.cu  ellipsoid.h  genpoints.cpp  genpoints.h  geometry.cpp  geometry.h  graphics.cpp  graphics.cu  graphics.h  main.cpp  main.cu  manifold.cpp  manifold.cu  manifold.h  metric.cpp  metric.cu  metric.h  util.h  vec.cpp  vec.h  weights.h
